--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "pack/plugins/start/ctrlp"]
 	path = pack/plugins/start/ctrlp
 	url = https://github.com/kien/ctrlp.vim
+[submodule "pack/plugins/start/vim-vue"]
+	path = pack/plugins/start/vim-vue
+	url = https://github.com/posva/vim-vue.git
