--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "pack/plugins/start/vim-airline"]
 	path = pack/plugins/start/vim-airline
-	url = https://github.com/vim-airline/vim-airline.git
+	url = https://github.com/vim-airline/vim-airline
 [submodule "pack/plugins/start/auto-pairs"]
 	path = pack/plugins/start/auto-pairs
 	url = git://github.com/jiangmiao/auto-pairs.git
@@ -16,3 +16,15 @@
 [submodule "pack/plugins/start/vim-vue"]
 	path = pack/plugins/start/vim-vue
 	url = https://github.com/posva/vim-vue.git
+[submodule "pack/plugins/start/ctrlp.vim"]
+	path = pack/plugins/start/ctrlp.vim
+	url = https://github.com/kien/ctrlp.vim.git
+[submodule "pack/plugins/start/auto-pairs-gentle"]
+	path = pack/plugins/start/auto-pairs-gentle
+	url = https://github.com/vim-scripts/auto-pairs-gentle
+[submodule "pack/plugins/start/vim-javascript"]
+	path = pack/plugins/start/vim-javascript
+	url = https://github.com/pangloss/vim-javascript.git
+[submodule "pack/plugins/start/vim-jsx"]
+	path = pack/plugins/start/vim-jsx
+	url = https://github.com/mxw/vim-jsx.git
