Add some more plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 [submodule "pack/plugins/start/vimoutliner"]
 	path = pack/plugins/start/vimoutliner
 	url = https://github.com/vimoutliner/vimoutliner.git
+[submodule "pack/plugins/start/vimwiki"]
+	path = pack/plugins/start/vimwiki
+	url = https://github.com/vimwiki/vimwiki.git
+[submodule "pack/plugins/start/vim-gdscript3"]
+	path = pack/plugins/start/vim-gdscript3
+	url = https://github.com/calviken/vim-gdscript3.git
